# math

./: .env.example  .gitignore  README.md  build_video.py  convert_legacy_json.py  h origin master  main.py  make_tts.py  measure_tts.py  pyproject.toml  render_problem_scene.py  script.txt  timings.json  why_multiplication.py
curriculum/: grade_0.yaml  grade_1.yaml
docs/: executable_json_design.md
json/: [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0001.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0002.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0003.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0004.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0005.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0006.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0007.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0008.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0009.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0010.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0011.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0012.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0013.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0014.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0015.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0016.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0017.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0018.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0019.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0002_q0020.json  [평가문제] 1.덧셈과 뺄셈 (2)_p0001_q0001.json  [평가문제] 1.덧셈과 뺄셈 (2)_p0001_q0002.json  [평가문제] 1.덧셈과 뺄셈 (2)_p0001_q0003.json  [평가문제] 1.덧셈과 뺄셈 (2)_p0001_q0004.json
json_re/: [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0001.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0002.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0003.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0004.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0005.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0006.json  [평가문제] 1.덧셈과 뺄셈 (1)_p0001_q0007.json  (+17 more)
(+37 files in other folders)
