[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-video-factory"
version = "0.1.0"
description = "Curriculum-driven automatic math video generator with Manim and TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "manim>=0.20.1",
  "mutagen>=1.47.0",
  "openai>=2.26.0",
  "pydub>=0.25.1",
  "python-dotenv>=1.2.2",
  "pyyaml>=6.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]